muutin web.xml siten, että projekti buildaa

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" id="WebApp_ID" version="2.4">
-  <display-name>
-        pankki</display-name>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+       http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+       version="2.5">
+
+
   <servlet>
     <description>
- 
-                </description>
+    </description>
     <display-name>
-                Kirjaudu
-        	</display-name>
+ 		Kirjaudu
+  	</display-name>
     <servlet-name>kirjaudu</servlet-name>
     <servlet-class>
-  		        fi.softala.jee.demo.d18.servlet.KirjautumisServlet</servlet-class>
+  		fi.softala.jee.demo.d18.servlet.KirjautumisServlet
+  	</servlet-class>
   </servlet>
+  
   <servlet-mapping>
     <servlet-name>kirjaudu</servlet-name>
     <url-pattern>/kirjaudu</url-pattern>
