--- a/src/main/resources/db_connection.properties
+++ b/src/main/resources/db_connection.properties
@@ -1,4 +1,4 @@
 db.driver=org.mariadb.jdbc.Driver
-db.url=jdbc:mariadb://localhost/javaee
-db.username=javaee
-db.password=deNUfh27t
+db.url=jdbc:mariadb://localhost/joulukortit
+db.username=joulukortit
+db.password=salasana
