--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,12 @@
 		<artifactId>slf4j-log4j12</artifactId>
 		<version>1.7.5</version>
 	</dependency>
-  	
+	
+  	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.3.0</version>
+	</dependency>
   	
   </dependencies>
  
