--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,18 @@
     	<groupId>com.allenru</groupId>
     	<artifactId>cross-origin</artifactId>
     	<version>1.0.1</version>
-	</dependency> 	
+	</dependency> 
+	<dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+		<version>1.1.0.Final</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-validator</artifactId>
+		<version>5.0.3.Final</version>
+	</dependency>	
   </dependencies>
  
 </project>
